# zettai-mamorukun

./: .gitignore  BACKLOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.example.toml  zettai-mamorukun.service
grafana/: README.md  zettai-mamorukun-overview.json
grafana/alerts/: README.md  prometheus_alerts.yaml
grafana/alerts/tests/: availability_test.yaml  events_test.yaml  scans_test.yaml
src/: config.rs  encryption.rs  error.rs  lib.rs  main.rs  profile.rs
src/core/: action.rs  alert_rule.rs  api.rs  correlation.rs  correlation_presets.rs  daemon.rs  dashboard.rs  event.rs  event_store.rs  event_stream.rs  health.rs  metrics.rs  mod.rs  module_manager.rs  module_stats.rs  openapi.rs  prometheus.rs  scan_diff.rs  scan_state.rs  scoring.rs  status.rs  syslog.rs
src/modules/: abstract_socket_monitor.rs  at_job_monitor.rs  auditd_monitor.rs  backdoor_detector.rs  bootloader_monitor.rs  capabilities_monitor.rs  cert_chain_monitor.rs  cgroup_monitor.rs  container_escape.rs  container_namespace.rs  coredump_monitor.rs  cron_monitor.rs  dbus_monitor.rs  dns_monitor.rs  dns_query_monitor.rs  dynamic_library_monitor.rs  ebpf_monitor.rs  env_injection_monitor.rs  fd_monitor.rs  file_integrity.rs  fileless_exec_monitor.rs  firewall_monitor.rs  group_monitor.rs  hidden_process_monitor.rs  honeypot_monitor.rs  initramfs_monitor.rs  inotify_monitor.rs  ipc_monitor.rs  journal_pattern_monitor.rs  kallsyms_monitor.rs  kernel_cmdline_monitor.rs  kernel_module.rs  kernel_params.rs  kernel_taint_monitor.rs  keylogger_detector.rs  ld_preload_monitor.rs  listening_port_monitor.rs  livepatch_monitor.rs  log_tamper.rs  login_session_monitor.rs  (+39 more)
tests/: integration_test.rs
