[package]
name = "zettai-mamorukun"
version = "0.63.0"
edition = "2024"
description = "Linux サーバ向けサイバー攻撃防御デーモン"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "2"
regex = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "process", "net", "io-util"] }
serde_json = "1"
tokio-util = "0.7"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
inotify = "0.11"
xattr = "1.6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process"] }
libc = "0.2"
wiremock = "0.6"
