[package]
name = "zettai-mamorukun"
version = "1.87.0"
edition = "2024"
description = "Linux サーバ向けサイバー攻撃防御デーモン"
license = "MIT"

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
thiserror = "2"
regex = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "process", "net", "io-util"] }
serde_json = "1"
tokio-util = "0.7"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
inotify = "0.11"
xattr = "1.6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
csv = "1"
flate2 = "1"
futures-util = "0.3"
x509-parser = "0.16"
pem = "3"
tracing-journald = "0.3"
libc = "0.2"
glob = "0.3"
ratatui = "0.29"
crossterm = "0.28"
gethostname = "1.0"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = "0.26"
tokio-tungstenite = "0.26"
rustls-pki-types = "1"
webpki-roots = "0.26"
rustls-pemfile = "2"
zeroize = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process"] }
wiremock = "0.6"
rcgen = "0.13"
tracing-test = "0.2"
